[metadata]
name = gsutil-backuper
version = 0.0.1
author = Mike Matera
author_email = matera@lifealgorithmic.com 
description = A utility to backup a directory to a bucket. 
url = https://github.com/mike-matera
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = 
packages = cis91
python_requires = >=3.8
install_requires =
    flask
    gunicorn

[options.packages.find]
where = src
